[package]
name = "HierarchicalCache"
version = "0.1.0"
authors = ["devillove084"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.9.1"
num_cpus = "1.13.0"
parking_lot = "0.11.1"
ahash = "0.7.0"
probabilistic-collections = "0.7.0"
indexmap = "1.6.1"
log = "0.4.14"
rand = "0.7.2"

