cargo-features = ["edition2021"]
[package]
name = "HierarchicalCache"
version = "0.1.0"
authors = ["devillove084"]
edition = "2021"

[profile.release]
opt-level = 3



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.9.1"
num_cpus = "1.13.0"
parking_lot = "0.11.1"
ahash = "0.7.0"
probabilistic-collections = "0.7.0"
indexmap = "1.6.1"
bytes = "1.0.1"
serde = { version = "1.0.123", features = ["derive"] }
seahash = "4.1.0"
smallvec = "1.6.1"
lazy_static = "1.4.0"
mio = { version = "0.7.8", features = ["net"] }
log = "0.4.14"
blake3 = "0.3.7"
serde_cbor = "0.11.1"
rand = "0.8.3"
num = {version = "0.3.1", features = ["serde"]}
quickcheck = "0.9"