[package]
name = "chash_map"
version = "0.1.0"
authors = ["devillove084 <786537003@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.8.2"
parking_lot = "0.10"
num_cpus = "1.12.0"
rayon = {version = "1.3", optional = true}
serde = {version = "1.0.105", optional = true}

[dependencies.ahash]
version = "0.3.2"
default-features = false

[dev-dependencies]
rand = "0.7"
rayon = "1.3"
criterion = "0.3"
serde_json = "1.0.50"

[lib]
name = "chash_map"
path = "lib.rs"
