[package]
name = "coffine"
version = "0.1.0"
authors = ["devillove084 <786537003@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chash_map = { path = "../chash_map" }

[lib]
name = "coffine"
path = "src/lib.rs"