[package]
name = "coffine"
version = "0.1.0"
authors = ["devillove084 <786537003@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chash_map = { path = "../chash_map" }
indexmap = "1.6"
log = "0.4"
rand = "0.7"
probabilistic-collections = "0.7"

[lib]
name = "coffine"
path = "src/lib.rs"