[package]
name = "ds_opt"
version = "0.1.0"
authors = ["devillove084 <786537003@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chash_map = {path = "../chash_map"}

tokio = { version = "1.0.0", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["codec"] }
shlex = "0.1.1"
promptly = "0.1.5"
rand = "0.7.2"
bytes = { version = "1.0.0", features = ["serde"] }
sloggers = "0.3.4"
lazy_static = "1.4.0"
slog = "2.5.2"
serde = "1.0.103"
serde_derive = "1.0.103"
bincode = "1.2.0"
structopt = "0.3.5"
directories = "2.0.2"
parking_lot = { version = "0.9.0", features = ["serde"] }
rmp-serde = "0.14.0"
spin = "0.5.2"
growable-bloom-filter = "0.2.3"
seahash = "3.0.6"
futures = "0.3.1"
futures-util = "0.3.1"
serde_bytes = "0.11.3"
#dashmap = { version = "3.11.10", features = ["serde"] }
memchr = "2.3.0"
smallvec = "1.4.1"
x7 = { git = "https://github.com/dpbriggs/x7.git", version = "*" }
num-traits = "0.2.14"


[lib]
name = "ds_opt"
path = "src/lib.rs"